[package]
name = "qmk-overlay"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version="1.0.228", features=["derive"] }
serde_json = "1.0.145"
deser-hjson = "2.2.4"
toml = "0.8"

# Platform specific deps
[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.13"

# GUI
egui = "0.33.2"
eframe = "0.33.2"

# Utilities
directories = "6.0.0"
log = "0.4.28"
env_logger = "0.11.8"
thiserror = "2.0.17"
